--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -122,7 +122,7 @@
         background-color: rgb(255, 255, 255);
         position: fixed;
         text-align: center;
-        height: 1.5em;
+        height: 2rem;
         bottom: 0%;
         width: 100%;
         z-index: 1;
