--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -31,8 +31,8 @@
         margin: 0% 25% 0% 10%;
     }
     #prof{
-        width:83%;
-        margin-left: 28%;
+        width: 120%;
+        margin-left: 0%;
     }
     #aboutR{
         text-align: left !important;
@@ -77,7 +77,8 @@
     }
     #prof{
         width: 45%;
-        margin-left: 17.5%;
+        margin-left: 0%;
+      
     }
     #details{
         white-space: nowrap;
@@ -333,8 +334,8 @@ li{
 }
 
 #prof {
-    width: 100%; /* Adjust the percentage or use a specific value like '300px' */
-    height: auto; /* Maintain the aspect ratio */
-    padding-right: 10%;
+    width: 120% !important; /* Adjust the percentage or use a specific value like '300px' */
+    height: auto !important; /* Maintain the aspect ratio */
+    padding-right: 5% !important;
     
 }
